--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,25 @@
 # Site settings
-title: Klise Theme # site title
+title: Yadu Krishnan # site title
 description: >- # site description
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
+  He is a junior student at VIT, Chennai
 lang: en-US # default lang
-timezone: Asia/Jakarta # set your timezone
-image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
-repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
+timezone: Asia/Kolkata # set your timezone
+repo: https://github.com/yadu-tv/yadu-tv.github.io # site repo [optional]
 mode: dark # default theme "dark" | "light"
 
 # Profile settings
 author:
-  name: Yadu Krishnan # author name
-  bio: >- # tell to the world
+  name: Yadu Krishnan 
+  bio: >- 
     Welcome to my blog site, get in touch with me at my <a href="https://github.com/yadu-tv" target="_blank" rel="noopener">@github</a>.
-  github: yadu-tv # github username
-  email: yaduk.tv@gmail.com # email adress
-  avatar: /assets/img/avatar.jpg # change with your own avatar
+  github: yadu-tv 
+  email: yaduk.tv@gmail.com 
+  avatar: /assets/img/avatar.jpg 
 
 # URL settings
 url: "https://yadu-tv.github.io" #
-baseurl:  "https://yadu-tv.github.io"
+baseurl:  ""
 permalink: /:title/
-google_analytics: # leave it blank if not wish
-fb_appid:
 
 # Collection setting
 collections:
