--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Yadu Krishnan # site title
 description: >- # site description
-  He is a junior student at VIT, Chennai
+  Senior at VIT, Chennai
 lang: en-US # default lang
 timezone: Asia/Kolkata # set your timezone
 repo: https://github.com/yadu-tv/yadu-tv.github.io # site repo [optional]
