--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
     Welcome to my blog site, get in touch with me at my <a href="https://github.com/yadu-tv" target="_blank" rel="noopener">@github</a>.
   github: yadu-tv 
   email: yaduk.tv@gmail.com 
-  avatar: /assets/img/avatar.jpg 
+  avatar: /assets/img/avatar.png 
 
 # URL settings
 url: "https://yadu-tv.github.io" #
