--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Yadu Krishnan 
   bio: >- 
-    Welcome to my blog site, get in touch with me at my <a href="https://github.com/yadu-tv" target="_blank" rel="noopener">@github</a>.
+    Welcome to my blog! I write about tech, coding, and my adventures as a developer. If you’re into software engineering, machine learning, or just want to chat, you’re in the right place. 
+    Want to connect? Find me on Discord as just.oat – always open to chat!
   github: yadu-tv 
   email: yaduk.tv@gmail.com 
   avatar: /assets/img/avatar.png 
