--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Yadu Krishnan 
   bio: >- 
-    Welcome to my blog! I write about tech, coding, and my adventures as a developer. If you're into software engineering, machine learning, or just want to chat, you're in the right place.
+    Welcome to my blog! I write about tech, coding, and my adventures as a developer. If you're into software engineering, machine learning, you're in the right place.
   github: yadu-tv 
   email: yaduk.tv@gmail.com 
   avatar: /assets/img/avatar.png
