--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Yadu Krishnan 
   bio: >- 
-    Code. Tech. Mistakes. Fixes. Stories.
+    Coffee. Code. Mistakes. Fixes. Stories.
   github: yadu-tv 
   email: yaduk.tv@gmail.com 
   avatar: /assets/img/avatar.png
